# end2end_ds_project

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
end2end_ds_project/: __init__.py  dataset.py  features.py  plots.py
end2end_ds_project/modeling/: predict.py  train.py
models/mlruns/377147707337886246/: meta.yaml
models/mlruns/377147707337886246/4ffbe1cd405942e8a23f2662b03e6f84/: meta.yaml
models/mlruns/377147707337886246/4ffbe1cd405942e8a23f2662b03e6f84/artifacts/: data.pkl  model.pkl
models/mlruns/377147707337886246/73ee1312f7a94a37830429596642ab4f/: meta.yaml
models/mlruns/377147707337886246/73ee1312f7a94a37830429596642ab4f/metrics/: accuracy_score  f1_score  precision_score  recall_score
models/mlruns/377147707337886246/73ee1312f7a94a37830429596642ab4f/tags/: mlflow.source.name
models/temp/: metrics.pkl
notebooks/: 00_exploration.ipynb  01_preprocessing.ipynb  02_analytics.ipynb  03_feature_engineering.ipynb  04a_clean_data.ipynb  04b_model_job_baseline.ipynb
