[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "end2end_ds_project"
version = "0.0.1"
description = "an end to end data science project (tack overflow developers survey)"
authors = [
  { name = "abdelhamid el bouni" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["end2end_ds_project"]
include = ["pyproject.toml", "end2end_ds_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["end2end_ds_project"]
force-sort-within-sections = true

